add link to src

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
 <main id=main></main>
 <hr>
 Base app: <a href=https://fukuno.jig.jp/calendar.html>一日一創カレンダー</a><br>
+<a href=https://github.com/code4fukui/object-store/>src on GitHub</a><br>
 
 <style>
 body {
